--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,21 +1,29 @@
 name: Pylint
 
-on: [push]
+on:
+  push:
+    branches-ignore:
+      - 'main'
 
 jobs:
-  build:
+  pylint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pylint
     - name: Clone EDMC
       uses: actions/checkout@v4
       with:
         repository: EDCD/EDMarketConnector
         path: EDMC
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        cache: 'pip' # caching pip dependencies
+        python-version-file: 'EDMC/.python-version'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pylint
     - name: Set Environment
       run: echo "PYTHONPATH=.:./EDMC" >> $GITHUB_ENV
     - name: Analysing the code with pylint
