--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,9 +23,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint --output-format=github
     - name: Set Environment
       run: echo "PYTHONPATH=.:./EDMC" >> $GITHUB_ENV
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint $(git ls-files '*.py') --output-format=github
