--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint --output-format=github
+        pip install pylint
     - name: Set Environment
       run: echo "PYTHONPATH=.:./EDMC" >> $GITHUB_ENV
     - name: Analysing the code with pylint
